Fix image source readability

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main {
   justify-content: center;
   align-items: center;
   color: white;
+  position: relative;
 }
 
 h1 {
@@ -47,9 +48,12 @@ h1 {
   padding: 20px 0;
 }
 .img-src {
+  text-align: center;
   position: absolute;
   bottom: 25px;
   font-size: 1rem;
+  background-color: rgba(0, 0, 0, 0.342);
+  width: 100%;
 }
 .left a:any-link{
     color: hsl(39, 60%, 60%);
